--- a/pages/approve/approve.wxml
+++ b/pages/approve/approve.wxml
@@ -1,13 +1,14 @@
 <import src="../../libs/weimport.wxml" />
 <import src="../../libs/wedetail.wxml"/>
+<import src="../../libs/wepage.wxml" />
 <wxs module="flowStepName">
   var fsName = function(i,cArray){
     return i==cArray.length-1 ? '' : '、'
   }
   module.exports.fsName=fsName;
 </wxs>
-<template is="navBarReturn" data="{{...navBarTitle}}"/>
 <view class="page">
+  <template is="p_navBar__back" data="{{...pw,navBarTitle:'流程审批'}}"/>
   <view class="page__hd">
     <view class="weui-cells__title">{{pBewrite}}</view>
   </view>
