--- a/inputedit/deal/deal.wxml
+++ b/inputedit/deal/deal.wxml
@@ -11,6 +11,6 @@
     </view>
   </view>
   <view wx:else>
-    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{showModalBox,animationData,tPage:cPage[ht.pageCk], pageData,reqData,...sPages[sPages.length-1]}}"/>
+    <template is="p_{{sPages[sPages.length-1].pageName}}" data="{{showModalBox,animationData,tPage:cPage[ht.pageCk], pageData,iFormat,...sPages[sPages.length-1]}}"/>
   </view>
 </view>
