--- a/pages/vprocedure/vprocedure.wxml
+++ b/pages/vprocedure/vprocedure.wxml
@@ -5,17 +5,17 @@
     <view class="navigationBar__column" style="height:{{pw.capsule}}px;">
       <template is="navBackIcon"/>
       <view class="weui-cell__bd">{{vData.uName}}</view>
-      <view wx:if="{{pno=='goods'}}" class="navigationBar__price">￥{{vData.price}}</view>
+      <view wx:if="{{pNo=='goods'}}" class="navigationBar__price">￥{{vData.price}}</view>
     </view>
   </view>
   <view style="padding-top:{{pw.statusBar+pw.capsule}}px;"></view>
-  <view class="page__sub" id="approval-{{pno}}">
+  <view class="page__sub" id="approval-{{pNo}}">
     <view class="page__bd page__ac_spacing">
-      <block wx:for="{{reqData}}" wx:key="index">
+      <block wx:for="{{vFormat}}" wx:key="index">
         <template is="s_{{item.t}}" data="{{...item, c:vData[item.gname]}}"></template>
       </block>
     </view>
-    <view wx:if="{{pno=='goods'}}">
+    <view wx:if="{{pNo=='goods'}}">
       <view class="page__ft weui-footer_fixed-bottom">
         <navigator class="button-group" url="/pages/rcustomer/rcustomer">
           <image src="../../../../images/icon_phonelogin.png" class="button-image" />
