--- a/pages/signup/signup.wxml
+++ b/pages/signup/signup.wxml
@@ -2,7 +2,7 @@
 <import src="../../libs/wepage.wxml" />
 <wxs src="signmsg.wxs" module="tk" />
 <view class="page">
-  <template is="p_navBar__back" data="{{...pw,navBarTitle,rtUrl}}"/>
+  <template is="p_navBar__back" data="{{statusBar,navBarTitle,rtUrl}}"/>
   <view class="page__hd">
     <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
       <view class="weui-media-box__hd_in-appmsg">
