--- a/inputedit/capital/capital.wxml
+++ b/inputedit/capital/capital.wxml
@@ -1,6 +1,6 @@
 <import src="../../libs/wepage.wxml" />
 <view class="page">
-  <template is="p_navBar__back" data="{{...pw,navBarTitle:'资金状况'}}"/>
+  <template is="p_navBar__back" data="{{statusBar,navBarTitle:'资金状况'}}"/>
   <view style="display:block;padding:1px;">
     <canvas canvas-id="ringCanvas" class="weui-canvas"> </canvas>
   </view>
