--- a/pages/marketing/marketing.wxml
+++ b/pages/marketing/marketing.wxml
@@ -2,10 +2,10 @@
 <import src="../../libs/weimport.wxml" />
 <view class="page">
   <view wx:if="{{tiringRoom}}">
-    <template is="p_navBar__switchTab" data="{{...pw,navBarTitle:'乐农汇的营销管理'}}"/>
+    <template is="p_navBar__switchTab" data="{{statusBar,navBarTitle:'乐农汇的营销管理'}}"/>
   </view>
   <view wx:else>
-    <template is="p_navBar__seach" data="{{...pw}}"/>
+    <template is="p_navBar__seach" data="{{statusBar}}"/>
   </view>
   <view class="page__main">
     <view class="page__hd">
