--- a/pages/wxchat/wxchat.wxml
+++ b/pages/wxchat/wxchat.wxml
@@ -1,7 +1,7 @@
 <import src="../../libs/weimport.wxml"/>
 <import src="../../libs/wepage.wxml" />
 <view class="page">
-  <template is="p_navBar__back" data="{{...pw,navBarTitle}}"/>
+  <template is="p_navBar__back" data="{{statusBar,navBarTitle}}"/>
   <view class="page__bd">
     <block wx:for="{{messages}}" wx:key="{{updatedAt}}">
       <view wx:if="{{item.uName}}">
